# app_backend

./: main.py  pyproject.toml  requirements.txt
adapters/: __init__.py  property_repository_notion_adapter.py  test_property_repository_notion_adapter.py
application/: property_use_cases.py  use_cases.py  user_use_cases.py
application/services/: notion_service.py
domain/: __init__.py
domain/models/: property.py  service.py  transaction.py  user.py
domain/ports/: property_repository.py  user_repository.py
domain/use_cases/: property_use_cases.py
infrastructure/adapters/: property_repository_notion_adapter.py  user_repository_adapter_sqlalchemy.py
infrastructure/controllers/: notion_controller.py  property_controller.py  user_controller.py  user_controllers.py
infrastructure/orm/: user_model.py
tests/infrastructure/adapters/: test_property_repository_notion_adapter.py
web_app/: __init__.py
web_app/controllers/: property_controller.py
