[tool.poetry]
name = "app-backend"
version = "0.1.0"
description = ""
authors = ["bytesantiago <ext.spozo@warbyparker.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
werkzeug = "2.0.2"
flask = "2.0.1"
pytest = "7.1.3"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
